Fixes some spacing between navigation links

--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,8 @@ nav{
 nav ul{
     display: flex;
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0 100px;
+    padding: 0 100px;
     text-align: center;
     justify-content: space-between;
 
@@ -37,12 +37,17 @@ nav ul li{
     margin-right: 0px;
 }
 
+nav ul li :last-child{
+    margin-left: 5px;
+}
+
 nav ul li a{
     text-decoration: none;
     color: black;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 18px;
     display: inline-block;
+    list-style-type: none;
 }
 
 nav a:hover, nav a:focus {
